fix: notification image on mobile page
Took 11 minutes

--- a/Website/index.css
+++ b/Website/index.css
@@ -56,6 +56,7 @@ h1 span {
 
 .notificationImage {
     margin: 32px 0 0 0;
+    width: 100%;
     border-radius: 24px;
     object-fit: cover;
     box-shadow: 0 32px 56px rgba(0, 0, 0, 1);
